--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
         run: npm ci
 
       - name: Build
-        run: npm run build
+        run: npm run build:github
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
 
